@startuml

title __COMPONENTS's Class Diagram__\n

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.ElevatorDetailList {
            - autoManual : CheckBox
            - doorStatusVal : Label
            - floorPosVal : Label
            - payloadVal : Label
            - speedVal : Label
            - targetFloorVal : Label
            + ElevatorDetailList()
            + updateBindings()
        }
      }
    }
  }
  

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.ElevatorFloorManagerListView {
            + floorList : List<Floor>
            {static} - log : Logger
            + ElevatorFloorManagerListView()
        }
      }
    }
  }
  

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.ElevatorListView {
            + elevatorList : ListView<ElevatorListItem>
            + ElevatorListView()
            + getSelectedElevator()
            + setOnChangedFunction()
        }
      }
    }
  }
  

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.ElevatorListView.ElevatorListItem {
            + ElevatorListItem()
        }
      }
    }
  }
  

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.Floor {
            + floorId : int
            + Floor()
            + isUnderService()
            + setUnderService()
            + toString()
            + unsetUnderService()
        }
      }
    }
  }
  

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.FloorDetailContextMenu {
            + sendToThisFloor : MenuItem
            + underService : CheckMenuItem
            + FloorDetailContextMenu()
        }
      }
    }
  }
  

  namespace at.fhhagenberg.sqe {
    namespace ui {
      namespace components {
        class at.fhhagenberg.sqe.ui.components.ToggleSwitch {
            - button : Button
            - label : Label
            - switchedOn : SimpleBooleanProperty
            + ToggleSwitch()
            + switchOnProperty()
            - bindProperties()
            - init()
            - setStyle()
        }
      }
    }
  }
  

  at.fhhagenberg.sqe.ui.components.ElevatorDetailList -up-|> javafx.scene.layout.VBox
  at.fhhagenberg.sqe.ui.components.ElevatorDetailList o-- at.fhhagenberg.sqe.ui.components.ElevatorListView : listView
  at.fhhagenberg.sqe.ui.components.ElevatorFloorManagerListView -up-|> javafx.scene.layout.HBox
  at.fhhagenberg.sqe.ui.components.ElevatorFloorManagerListView o-- at.fhhagenberg.sqe.ui.components.ElevatorListView : listView
  at.fhhagenberg.sqe.ui.components.ElevatorFloorManagerListView o-- sqelevator.IElevator : elevatorControl
  at.fhhagenberg.sqe.ui.components.ElevatorFloorManagerListView o-- at.fhhagenberg.sqe.ui.components.FloorDetailContextMenu : floorContextMenu
  at.fhhagenberg.sqe.ui.components.ElevatorListView -up-|> javafx.scene.layout.HBox
  at.fhhagenberg.sqe.ui.components.ElevatorListView +-down- at.fhhagenberg.sqe.ui.components.ElevatorListView.ElevatorListItem
  at.fhhagenberg.sqe.ui.components.ElevatorListView.ElevatorListItem -up-|> javafx.scene.control.Label
  at.fhhagenberg.sqe.ui.components.ElevatorListView.ElevatorListItem o-- sqelevator.Elevator : e
  at.fhhagenberg.sqe.ui.components.Floor o-- sqelevator.IElevator : elevatorControl
  at.fhhagenberg.sqe.ui.components.Floor o-- at.fhhagenberg.sqe.ui.components.ElevatorListView : elevatorListView
  at.fhhagenberg.sqe.ui.components.FloorDetailContextMenu -up-|> javafx.scene.control.ContextMenu
  at.fhhagenberg.sqe.ui.components.ToggleSwitch -up-|> javafx.scene.layout.HBox


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
